--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <a href="home.html"><img src="images/headerlogo.png" class="logo" alt="" style="height: 150px"></a>
     <div>
       <ul id="navbar">
-        <li><a  href="home.html">Home</a></li>
+        <li><a  href="index.html">Home</a></li>
         <li><a  href="shop.html">Shop</a></li>
         <li><a class="active" href="about.html">About</a></li>
         <li><a href="contact.html">Contact us</a></li>
