--- a/cart.html
+++ b/cart.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <section id="header">
-    <a href="home.html"><img src="images/headerlogo.png" class="logo" alt="" style="height: 150px"></a>
+    <a href="index.html"><img src="images/headerlogo.png" class="logo" alt="" style="height: 150px"></a>
     <div>
       <ul id="navbar">
-        <li><a  href="home.html">Home</a></li>
+        <li><a  href="index.html">Home</a></li>
         <li><a  href="shop.html">Shop</a></li>
         <li><a  href="about.html">About</a></li>
         <li><a  href="contact.html">Contact us</a></li>
