--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section id="header">
-    <a href="home.html"><img src="images/headerlogo.png" class="logo" alt="" style="height: 150px"></a>
+    <a href="index.html"><img src="images/headerlogo.png" class="logo" alt="" style="height: 150px"></a>
     <div>
       <ul id="navbar">
         <li><a  href="index.html">Home</a></li>
