--- a/cart.html
+++ b/cart.html
@@ -62,13 +62,8 @@
                 <td>Cart Subtotal</td>
                 <td>Rs.<span id="total-price"></span></td>
             </tr>
-            <tr>
-                <td>Shipping</td>
-                <td>Free</td>
-            </tr>
-           
         </table>
-        <button class="normal">Purchase</button>
+        <button class="normal"><a style="text-decoration: none; color: white;" href="form.html">Purchase</a></button>
     </div>
 </section>
 
